# setlx-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
discrepancies/: mvp.stlx  mvp1.stlx  mvp2.stlx  mvp3.stlx  mvp4.stlx  mvp5.stlx  mvp6.stlx  mvp7.stlx  term_eval_primitive.stlx
docs/: ir.md  setup.md
scripts/: cleanup.sh  dot2png.sh
src/: ast.rs  cli.rs  diagnostics.rs  grammar.lalrpop  lib.rs  logo_big.txt  logo_small.txt  main.rs  shell.stlx  util.rs
src/builtin/: call.rs  mod.rs  stubs.rs
src/cst/: dot.rs  dump.rs  mod.rs
src/interp/: assign.rs  ast.rs  debug.rs  except.rs  exec.rs  get.rs  heap.rs  memoize.rs  mod.rs  ops.rs  serialize.rs  stack.rs
src/ir/: def.rs  dump.rs  mod.rs
src/link/: mod.rs
src/util/: file.rs  mod.rs  unescape.rs
tests/: cases.rs  suites.rs
tests/cases/: abs_str.stlx  abs_str.stlx.reference  access_assign.stlx  access_assign.stlx.reference  access_tagged_list.stlx  arb_ordering.stlx  arb_ordering.stlx.reference  args_param_persistence.stlx  assign_acc_multi.stlx  assign_acc_multi.stlx.reference  assign_borrow_self.stlx  assign_expr_shared_mem.stlx  assign_prior_invalidate.stlx  ast_cmp.stlx  ast_cmp.stlx.reference  ast_set_eq_set.stlx  ast_set_eq_set.stlx.reference  ast_term_names.stlx  ast_term_names.stlx.reference  cabbage_farmer_goat_wolf.stlx  cabbage_farmer_goat_wolf.stlx.reference  cache.stlx  call_rest.stlx  card.stlx  card.stlx.reference  class_constructor_this.stlx  class_get_class.stlx  class_mem_overwrite.stlx  class_mem_ref.stlx  class_mem_ref.stlx.reference  class_obj_get_class_persist.stlx  class_obj_overload.stlx  class_obj_overload.stlx.reference  class_obj_overload_serialize.stlx  class_obj_persist.stlx  class_obj_this_stack_ctx.stlx  class_op_serialize.stlx  closure_params.stlx  closure_persistence.stlx  cmp_edge.stlx  (+132 more)
tests/suites/: stroetmann-logic.json  upstream_examples.json
writeup/: .latexmkrc  Makefile  acronyms.tex  bibliography.bib  config.tex  glossary.tex  log  main.tex
writeup/appendix/: ai-notice.tex  examples.tex  features.tex  grammar.g4  grammar.tex  results.tex
writeup/chapters/: abstract.tex  background.tex  (+5 more)
(+68 files in other folders)
