[package]
name = "setlx-rs"
version = "0.0.1"
authors = ["Maximilian Immanuel Brandtner <maximilian.immanuel.brandtner@protonmail.com>"]
edition = "2024"
license = "MIT"

[build-dependencies]
lalrpop = {version = "0.22.2", features = ["lexer"]}

[dev-dependencies]
git2 = "0.20.2"
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = "1.0.145"
tempfile = "3.23.0"
walkdir = "2.5.0"

[dependencies]
clap = "4.5.48"
dot = "0.1.4"
lalrpop-util = {version = "0.22.2", features = ["lexer"]}
num-bigint = "0.4.6"
