[package]
name = "setlx-rs"
version = "0.0.1"
authors = ["Maximilian Immanuel Brandtner <maximilian.immanuel.brandtner@protonmail.com>"]
edition = "2024"
license = "MIT"

[build-dependencies]
lalrpop = {version = "0.22.2", features = ["lexer"]}

[dev-dependencies]
git2 = "0.20.2"
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = "1.0.145"
tempfile = "3.23.0"
walkdir = "2.5.0"

[dependencies]
ariadne = "0.6.0"
bitflags = "2.10.0"
clap = "4.5.48"
dot = "0.1.4"
gag = "1.0.0"
glass_pumpkin = "1.10.0"
lalrpop-util = {version = "0.22.2", features = ["lexer"]}
nalgebra = "0.34.1"
num-bigint = "0.4.6"
num-prime = "0.5.0"
num-traits = "0.2.19"
pcre2 = "0.2.11"
petgraph = "0.8.3"
pretty_assertions = "1.4.1"
rand = "0.10.0"
rustyline = "15.0.0" # https://github.com/kkawakam/rustyline/issues/879
strum = "0.27.2"
strum_macros = "0.27.2"
yansi = "1.0.1"
